fix: weird left hard border when load-blurring

--- a/frontend/src/styles/_animations.scss
+++ b/frontend/src/styles/_animations.scss
@@ -97,7 +97,7 @@
   100% { transform: rotate(360deg); }
 }
 
-#transactions.htmx-request, #summary.htmx-request {
+.show-loading.htmx-request {
   position: relative;
   top: 0;
 
@@ -105,11 +105,11 @@
     content: '';
     position: absolute;
     top: 0;
-    left: 0;
-    right: 0;
+    left: -8px;
+    right: -8px;
     bottom: 0;
     backdrop-filter: blur(4px);
-    z-index: 1000;
+    z-index: 100;
   }
 
   &::after {
@@ -119,12 +119,10 @@
     left: 50%;
     width: 40px;
     height: 40px;
-    margin-top: -20px;
-    margin-left: -20px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid $primary;
     border-radius: 50%;
     animation: spin 1s linear infinite;
-    z-index: 1001;
+    z-index: 101;
   }
 }
